remove results from repo

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 /themes/erfgoedlabo/package.json
 /themes/erfgoedlabo/config.rb
 /themes/erfgoedlabo/Gruntfile.js
+/plugins/SimpleContactForm/files
 
 #################
 ## Eclipse
